--- a/OksiMin/OksiMin.Api/appsettings.json
+++ b/OksiMin/OksiMin.Api/appsettings.json
@@ -43,6 +43,13 @@
           "fileSizeLimitBytes": 10485760,
           "rollOnFileSizeLimit": true
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "apiKey": ""
+        }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
