--- a/OksiMin/OksiMin.Infrastructure/OksiMin.Infrastructure.csproj
+++ b/OksiMin/OksiMin.Infrastructure/OksiMin.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OksiMin.Application\OksiMin.Application.csproj" />
     <ProjectReference Include="..\OksiMin.Domain\OksiMin.Domain.csproj" />
   </ItemGroup>
 
